# rust-cli

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  data.csv  output.json
.github/workflows/: build.yml
src/: lib.rs  main.rs  opts.rs
src/cli/: base64.rs  csv.rs  mod.rs  opts.rs
